# DocumentLike

./: CMakeLists.txt  README.md  main.cpp
src/: document_like.cpp  document_like.hpp
test/: CMakeLists.txt  main.cpp
